[AppSSO] Should do null check on m_page in dismissViewController() https://bugs.webkit.org/show_bug.cgi?id=213415 <rdar://problem/59672418>

Reviewed by Alexey Proskuryakov.

* UIProcess/Cocoa/SOAuthorization/SOAuthorizationSession.mm:
(WebKit::SOAuthorizationSession::dismissViewController):


Canonical link: https://commits.webkit.org/226230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263324 268f45cc-cd09-0410-ab3c-d52691b4dbfc